Fixed with publiclayout css

--- a/YesDay/Views/Shared/_CoupleLayout.cshtml
+++ b/YesDay/Views/Shared/_CoupleLayout.cshtml
@@ -12,7 +12,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster|Raleway" rel="stylesheet">
 </head>
 <body>
-    <div class="container" style="width:100%">
+   
+    <div class="container">
         <div class="row">
             <div class="col" style="width:5px; height:68px">
                 <div class="nav-toggle">
@@ -49,13 +50,12 @@
                     }());
                 </script>
                 <a asp-controller="Couple" asp-action="overview">
-                    <img src="~/Images/banner.png" alt="logo" style="height:68px; width:200px" />
+                    <img src="~/Images/banner.png" alt="logo" style="height:100px; width:300px" />
                 </a>
-                @*<h3 style="font-family: 'Lobster', cursive;">YesDay</h3>*@
             </div>
 
             <div class="col" style="margin-top:10px">
-                <div id="daysremaining" style="font-family: 'Roboto', sans-serif; color:#9Fb8Bf; margin-top:15px"></div>
+                <div id="daysremaining"></div>
             </div>
 
             <div class="col" style="margin-top:10px;">
@@ -68,16 +68,15 @@
             </div>
         </div>
         <div class="row">
-           @*<div class="col"></div>*@
+            @*<div class="col"></div>*@
             <div class="col-10">
-            <div>
-                @RenderBody()
-            </div>
+                <div>
+                    @RenderBody()
+                </div>
             </div>
             @*<div class="col"></div>*@
         </div>
     </div>
-
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
