--- a/YesDay/wwwroot/StyleSheet.css
+++ b/YesDay/wwwroot/StyleSheet.css
@@ -24,9 +24,8 @@ a {
     padding-right: 0;
 }
 
-.col, .col-10 {
-    padding-left: 0;
-    padding-right: 0;
+.col-8 {
+    padding-top: 50px;
 }
 
 .nav {
@@ -135,13 +134,6 @@ a {
         }
 
 
-/*#daysremaining {
-    font-family: 'Roboto', sans-serif;
-    color: #9Fb8Bf;
-    margin-top: 15px;
-}*/
-
-
 #todo_list {
     margin: 5px;
     border: 1px solid gray;
@@ -236,8 +228,9 @@ a {
 }
 
 
-.btn.btn-light{
-    background-color:#D6CCC2;
+.btn.btn-light {
+    background-color: #D6CCC2;
+    padding-right: 4px;
 }
 
 #header {
@@ -254,4 +247,25 @@ a {
     background-color: #D6CCC2;
     padding-top: 30px;
     padding-bottom: 10px;
+    width: auto;
+}
+
+#daysremaining {
+    font-size: 25px;
+    color: #9Fb8Bf;
+    margin-top: 25px;
+}
+header {
+    width: 100%;
+    height: 150px;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+}
+
+#skitbajs{
+    top:10px;
+    left: 350px;
 }
