--- a/YesDay/Views/Shared/_CoupleLayout.cshtml
+++ b/YesDay/Views/Shared/_CoupleLayout.cshtml
@@ -8,8 +8,10 @@
     <meta charset="utf-8">
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/tox-progress.css" />
     <link rel="stylesheet" href="~/StyleSheet.css" />
     <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto" rel="stylesheet">
+    <script src="~/tox-progress.js"></script>
 </head>
 <body>
     <div class="container" style="width:100%">
