--- a/YesDay/Views/Couple/Expense.cshtml
+++ b/YesDay/Views/Couple/Expense.cshtml
@@ -25,7 +25,7 @@
         </div>
         <div id="progressbar" class="col">
             <div class="tox-progress" data-size="100" data-thickness="12" data-color="#515D61" data-background="#fcfbf1" data-progress="@Convert.ToInt32(Model.Item2.Percentage)" data-speed="500">
-                <div class="tox-progress-content" data-vcenter="true" style="">
+                <div class="tox-progress-content" data-vcenter="true">
                     @Convert.ToInt32(Model.Item2.Percentage) % av budget
                 </div>
             </div>
