--- a/YesDay/Views/Shared/_PublicLayout.cshtml
+++ b/YesDay/Views/Shared/_PublicLayout.cshtml
@@ -56,7 +56,7 @@
                     </nav>
                    
                 </div>
-                <div class="col" id="skitbajs">
+                <div class="col" id="loginregisterbtn">
                     <nav>
                         <a asp-controller="public" asp-action="Signup"><input class="btn btn-light" type="submit" value="Registrera" /></a>
                         <a asp-controller="public" asp-action="Login"><input class="btn btn-light" type="submit" value="Logga in" /></a>
