--- a/YesDay/Views/Shared/_CoupleLayout.cshtml
+++ b/YesDay/Views/Shared/_CoupleLayout.cshtml
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="~/tox-progress.css" />
     <link rel="stylesheet" href="~/StyleSheet.css" />
-    <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Raleway" rel="stylesheet">
     <script src="~/tox-progress.js"></script>
 </head>
 <body>
@@ -53,30 +53,25 @@
                 <a asp-controller="Couple" asp-action="overview">
                     <img src="~/Images/banner.png" alt="logo" style="height:68px; width:200px" />
                 </a>
-                @*<h3 style="font-family: 'Lobster', cursive;">YesDay</h3>*@
             </div>
-
-            <div class="col" style="margin-top:10px">
-                <div id="daysremaining" style="font-family: 'Roboto', sans-serif; color:#9Fb8Bf; margin-top:15px"></div>
+            <div class="col">
+                <div id="daysremaining"></div>
             </div>
-
-            <div class="col" style="margin-top:10px;">
+            <div class="col" >
                 <form>
                     <div class="form-group">
-                        <input class="btn btn-light" style="color:#9Fb8Bf" type="submit" asp-controller="Couple" asp-action="Logout" value="Logga ut" />
+                        <input class="btn btn-light"  type="submit" asp-controller="Couple" asp-action="Logout" value="Logga ut" />
                     </div>
                 </form>
 
             </div>
         </div>
         <div class="row">
-           @*<div class="col"></div>*@
             <div class="col-10">
             <div>
                 @RenderBody()
             </div>
             </div>
-            @*<div class="col"></div>*@
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
