--- a/YesDay/Views/Public/Index.cshtml
+++ b/YesDay/Views/Public/Index.cshtml
@@ -1,24 +1,24 @@
 ﻿<div class="col-centered">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
-            <div class="carousel-item active">
+            <div class="carousel-item active" data-interval="4000">
                 <img class="d-block w-100" src="~/Images/FlowerRings.jpg" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
-                <h4>Planera ditt drömbröllop med YesDay!</h4>
+                <h4 id="carousel_text">Planera ditt drömbröllop med YesDay!</h4>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" data-interval="4000">
                 <img class="d-block w-100" src="~/Images/TableTopBrownCups.jpg" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
-                <h4>All information på ett och samma ställe!</h4>
+                <h4 id="carousel_text">All information på ett och samma ställe!</h4>
             </div>
 
-            <div class="carousel-item">
+            <div class="carousel-item" data-interval="4000">
                 <img class="d-block w-100" src="~/Images/RaiseGlassDinner.jpg" alt="Third slide">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
-                <h4>Luta dig tillbaka och njut av till bröllop!</h4>
+                <h4 id="carousel_text">Luta dig tillbaka och njut av till bröllop!</h4>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
