--- a/YesDay/Views/Shared/_PublicLayout.cshtml
+++ b/YesDay/Views/Shared/_PublicLayout.cshtml
@@ -54,7 +54,7 @@
                             <img src="~/Images/banner.png" alt="logo" style="height:100px; width:300px" />
                         </a>
                     </nav>
-                   
+
                 </div>
                 <div class="col" id="loginregisterbtn">
                     <nav>
@@ -66,16 +66,11 @@
         </div>
     </header>
     <div class="row">
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col-8" id="publiclayoutcontainer">
+        <div class="col">
             <div>
                 @RenderBody()
             </div>
         </div>
-        <div class="col"></div>
-        <div class="col"></div>
-
     </div>
     <div class="footer">
         <div class="container">
