--- a/YesDay/wwwroot/StyleSheet.css
+++ b/YesDay/wwwroot/StyleSheet.css
@@ -224,7 +224,7 @@ a {
     margin-right: auto;
     margin-top: 100px;
     height: 520px;
-    width: 50%;
+    width: 100%;
 }
 
 
@@ -259,7 +259,7 @@ header {
     width: 100%;
     height: 150px;
     overflow: hidden;
-    position: fixed;
+    /*position: fixed;*/
     top: 0;
     left: 0;
     z-index: 999;
@@ -272,4 +272,8 @@ header {
 
 .tox-progress-content {
     text-align:center;
+}
+
+#carousel_text {
+    text-align: center;
 }
