style public area

--- a/YesDay/Views/Public/Index.cshtml
+++ b/YesDay/Views/Public/Index.cshtml
@@ -2,22 +2,22 @@
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active" data-interval="4000">
-                <img class="d-block w-100" src="~/Images/FlowerRings.jpg" alt="First slide">
+                <img class="d-block w-100" src="~/Images/headerblommor.PNG" alt="First slide" style="height:470px;">
                 <div class="carousel-caption d-none d-md-block">
-                </div>
+                </div><br />
                 <h4 id="carousel_text">Planera ditt drömbröllop med YesDay!</h4>
             </div>
             <div class="carousel-item" data-interval="4000">
-                <img class="d-block w-100" src="~/Images/TableTopBrownCups.jpg" alt="Second slide">
+                <img class="d-block w-100" src="~/Images/headerdukning.PNG" alt="Second slide" style="height:470px;">
                 <div class="carousel-caption d-none d-md-block">
-                </div>
+                </div><br />
                 <h4 id="carousel_text">All information på ett och samma ställe!</h4>
             </div>
 
             <div class="carousel-item" data-interval="4000">
-                <img class="d-block w-100" src="~/Images/RaiseGlassDinner.jpg" alt="Third slide">
+                <img class="d-block w-100" src="~/Images/headermacrons.PNG" alt="Third slide" style="height:470px;">
                 <div class="carousel-caption d-none d-md-block">
-                </div>
+                </div><br />
                 <h4 id="carousel_text">Luta dig tillbaka och njut av till bröllop!</h4>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
