--- a/YesDay/wwwroot/StyleSheet.css
+++ b/YesDay/wwwroot/StyleSheet.css
@@ -4,14 +4,13 @@
     font-family: 'Raleway', sans-serif;
 }
 
-#publiclayoutcontainer {
-    border-right: 1px solid #515D61;
-    border-left: 1px solid #515D61;
-}
-
 h3 {
     color: #515D61;
     font-family: 'Lobster', cursive;
+}
+
+h2 {
+    color: #515D61;
 }
 
 a {
@@ -219,12 +218,13 @@ a {
 
 
 #carouselExampleIndicators {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 100px;
-    height: 520px;
-    width: 100%;
+    /*display: block;*/
+    /*margin-left: 0;
+    margin-right: auto;*/
+    margin-top: 50px;
+    margin-bottom:20px;
+    /*height: 300px;*/
+    width: auto;
 }
 
 
@@ -235,7 +235,7 @@ a {
 
 #header {
     padding-top: 35px;
-    padding-bottom: 50px;
+    padding-bottom: 15px;
 }
 
 #overviewheader {
@@ -255,9 +255,10 @@ a {
     color: #9Fb8Bf;
     margin-top: 25px;
 }
+
 header {
     width: 100%;
-    height: 150px;
+    height: 100px;
     overflow: hidden;
     /*position: fixed;*/
     top: 0;
@@ -267,7 +268,7 @@ header {
 
 #loginregisterbtn{
     top: 10px;
-    left: 350px;
+    /*left: 350px;*/
 }
 
 .tox-progress-content {
@@ -277,3 +278,4 @@ header {
 #carousel_text {
     text-align: center;
 }
+
